# Competitive-Analyst-Agent

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
comp_analyst/: pyproject.toml
comp_analyst/src/comp_analyst/: app.py  crew.py  main.py  report.md
comp_analyst/src/comp_analyst/config/: agents.yaml  tasks.yaml
