[project]
name = "comp_analyst"
version = "0.1.0"
description = "comp_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
comp_analyst = "comp_analyst.main:run"
run_crew = "comp_analyst.main:run"
train = "comp_analyst.main:train"
replay = "comp_analyst.main:replay"
test = "comp_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
